<resources>
    <string name="summary">A microG/UnifiedNlp location provider backend using private on phone RF emitter database</string>

    <!-- settings -->
    <string name="pref_export_title">Export data</string>
    <string name="pref_export_summary">Write all data to a CSV file</string>
    <string name="export_jb">Export is only supported on KitKat and above</string>
    <string name="export_canceled">Export canceled</string>
    <string name="export_title">Exporting…</string>
    <string name="export_done">Export finished</string>
    <string name="export_error">Error while exporting: %s</string>
    <string name="pref_kalman_title">Use Kalman filter for GPS location</string>
    <string name="pref_kalman_summary">Recommended for devices with bad GPS</string>
    <string name="pref_use_cell_title">Use cell tower locations</string>
    <string name="pref_use_cell_summary">When disabled, scans for cell towers will not happen</string>
    <string name="pref_use_wlan_title">Use WiFi locations</string>
    <string name="pref_use_wlan_summary">When disabled, WiFi scans will not happen</string>
    <string name="pref_active_mode_title">Active mode</string>
    <string name="pref_active_mode_summary">Enable GPS when unknown emitters are found (to fill up the database)</string>
    <string name="pref_active_mode_off">Off</string>
    <string name="pref_active_mode_low">Low - Enable GPS only when emitters are found, but no location could be determined at all</string>
    <string name="pref_active_mode_medium">Medium - Also enable GPS when WiFi emitters were found, but none of them could be used to determine a location</string>
    <string name="pref_active_mode_high">High - Like above, but require better GPS accuracy (to store 5 GHz WiFis)</string>
    <string name="pref_active_mode_aggressive">Aggressive - Enable GPS when unknown emitters are found. Very likely to cause excessive battery drain</string>
    <string name="pref_active_time_title">Active mode GPS timeout</string>
    <string name="active_mode_active">Active mode: GPS on. Scanning because of %s and %d others</string>
    <string name="pref_show_emitters_title">Show nearby emitters</string>
    <string name="pref_show_emitters_summary">Scans for emitters and displays result with additional information</string>
    <string name="pref_cull_title">Discard bad emitters</string>
    <string name="pref_cull_summary">Decide which emitters should be discarded in case of inconsistent locations</string>
    <string name="pref_cull_message">Default (used in Déjà Vu): only use the largest consistent group of emitters. This usually gives good accuracy, but occasionally produces wrong locations.\n\n
Median: discard emitters that are unbelievably far from the median location: somewhat worse accuracy than default, but reduced chance of wrong locations.\n\n
Use all emitters: sensitive to extreme outliers and often the least accurate of the three, but most likely to contain the actual location inside the accuracy circle.\n\n
Often all 3 methods give (nearly) the same results, expect to see a difference only in some cases.\n\n
Current setting: %s
    </string>
    <string name="pref_cull_default">Default</string>
    <string name="pref_cull_median">Median</string>
    <string name="pref_cull_none">Use all</string>
    <string name="pref_import_title">Import data</string>
    <string name="pref_import_summary">Select CSV created from export, Déjà Vu / Local NLP Backend database or MLS / OpenCelliD csv list</string>
    <string name="import_error_format">Error: file format unknown</string>
    <string name="import_error_line">Error parsing line %s</string>
    <string name="import_error_database">Error importing database: %s</string>
    <string name="import_message">How to handle emitters that already exist in local database?</string>
    <string name="import_replace">Replace local emitters</string>
    <string name="import_keep">Keep local emitters unchanged</string>
    <string name="import_merge">Merge emitters</string>
    <string name="import_finishing">Updating database…</string>
    <string name="import_mls_use_type">Use %s</string>
    <string name="import_mls_title">Import from csv file</string>
    <string name="import_mls_country_code_message">Enter country codes (MCC) to import, comma separated. Use "x" as placeholder for digits 0–9. Leave blank to import all.</string>
    <string name="import_title">Importing…</string>
    <string name="import_canceled">Import canceled, no changes made</string>
    <string name="import_number_progress">%1$d imported, %2$d skipped</string>
    <string name="import_done">Import finished</string>
    <string name="show_scan_started">Scanning…</string>
    <string name="show_scan_start_failed">Scanning failed, maybe the backend service is disabled</string>
    <string name="show_scan_results">Nearby emitters</string>
    <string name="show_scan_details_emitter">Details for emitter %s</string>
    <string name="show_scan_details_emitter_type">Emitter type: %s</string>
    <string name="show_scan_details_emitter_ssid">WiFi SSID: %s</string>
    <string name="show_scan_details_emitter_center">Center: latitude %1$.5f, longitude %2$.5f</string>
    <string name="show_scan_details_emitter_radius_ew">Width east-west: %.2f m</string>
    <string name="show_scan_details_emitter_radius_ns">Width north-south: %.2f m</string>
    <string name="show_scan_details_emitter_signal">Signal: %d / 5</string>
    <string name="show_scan_details_emitter_blacklisted">This emitter is blacklisted</string>
    <string name="show_scan_details_emitter_not_in_db">This emitter is not in the database</string>
    <string name="show_scan_details_emitter_blacklist">Blacklist this emitter</string>
    <string name="show_scan_emitter_delete">Delete emitter %s?</string>
    <string name="show_scan_emitter_delete_confirm">Delete</string>
    <string name="show_scan_no_network_provider">Network location provider not available</string>

    <!-- other -->
    <string name="background_location_permission_toast">Please enable Local NLP Backend again so it may ask for background location permission</string>
    <string name="handle_geo_uri_message">
        Scan and insert emitters into database at this location?\n
        latitude: %1$.5f\n
        longitude: %2$.5f
    </string>

</resources>
